[gd_scene load_steps=14 format=3 uid="uid://b4tr46l7e1vgt"]

[ext_resource type="Script" uid="uid://c134qad0b72px" path="res://Scripts/Player_Attacks/rocket.gd" id="1_yirbs"]
[ext_resource type="Texture2D" uid="uid://drmy85iharx03" path="res://Assets/Rocket.png" id="2_yirbs"]
[ext_resource type="Texture2D" uid="uid://d04imqgr2bfhc" path="res://Assets/Explotions/biggerboom/biggerboom1.png" id="3_ye7jb"]
[ext_resource type="Texture2D" uid="uid://dcwo6n6h1grse" path="res://Assets/Explotions/biggerboom/biggerboom2.png" id="4_o8pyh"]
[ext_resource type="Texture2D" uid="uid://b3wlib2bcy06g" path="res://Assets/Explotions/biggerboom/biggerboom3.png" id="5_gr0ig"]
[ext_resource type="Texture2D" uid="uid://bejfj167iiduo" path="res://Assets/Explotions/biggerboom/biggerboom4.png" id="6_cuplq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g04ui"]
size = Vector2(11.6, 19.1)

[sub_resource type="Animation" id="Animation_yirbs"]
resource_name = "Explotion"

[sub_resource type="Animation" id="Animation_2p7oc"]
resource_name = "Fly_Anim"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33, 0.666),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333, 0.666667),
"transitions": PackedFloat32Array(1e-05, 1e-05, 1e-05),
"update": 0,
"values": [Vector2(-1, 0), Vector2(1, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_gx8hi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sh3pf"]
_data = {
&"Explotion": SubResource("Animation_yirbs"),
&"Fly_Anim": SubResource("Animation_2p7oc"),
&"RESET": SubResource("Animation_gx8hi")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_8dxpu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ye7jb")
}, {
"duration": 1.0,
"texture": ExtResource("4_o8pyh")
}, {
"duration": 1.0,
"texture": ExtResource("5_gr0ig")
}, {
"duration": 1.0,
"texture": ExtResource("6_cuplq")
}],
"loop": false,
"name": &"BOOM",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_h8h3s"]
radius = 34.2286

[node name="CharacterBody2D" type="CharacterBody2D"]
scale = Vector2(5, 5)
collision_layer = 8
collision_mask = 4
script = ExtResource("1_yirbs")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_yirbs")
hframes = 3

[node name="Rocket_Collision" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rocket_Collision"]
position = Vector2(1.49012e-08, -1.4)
shape = SubResource("RectangleShape2D_g04ui")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sh3pf")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="BOOM" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_8dxpu")
animation = &"BOOM"

[node name="Explotion_Area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explotion_Area"]
shape = SubResource("CircleShape2D_h8h3s")

[connection signal="body_entered" from="Rocket_Collision" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="BOOM" to="." method="_on_boom_animation_finished"]
[connection signal="body_entered" from="Explotion_Area" to="." method="_on_explotion_area_body_entered"]
